# shipdesignlab

./: .gitignore  .release-please-manifest.json  release-please-config.json  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: release-please.yml  tests.yml
operation_profile_lib/: .gitignore  00_operation_profile_structure.ipynb  CHANGELOG.md  README.md  azure-pipelines.yml  build_package.bat  build_package.sh  index.ipynb  operation_profile.proto  pip.ini  settings.ini
operation_profile_lib/operation_profile_lib/: _modidx.py  operation_profile_pb2.py  operation_profile_structure.py
ship_model_lib/: .gitignore  00_CalmWaterResistance.ipynb  01_AddedResistance.ipynb  02_Propulsor.ipynb  03_Machinery.ipynb  04_utility.ipynb  05_ship_model.ipynb  06_ship_dimensions.ipynb  07_operation_profile_structure.ipynb  CHANGELOG.md  MANIFEST.in  azure-pipelines.yml  index.ipynb  requirements.txt  settings.ini  setup.py  sidebar.yml
ship_model_lib/dependencies/: B_series_coefficients.npy  Re_correction.npy
ship_model_lib/ship_model_lib/: _modidx.py  added_resistance.py  calm_water_resistance.py  machinery.py  operation_profile_structure.py  propulsor.py  ship_dimensions.py  ship_model.py  types.py  utility.py
ship_performance_service_interface/: CHANGELOG.md  README.md  azure-pipelines.yml  compile_proto_file.bat  pyproject.toml  setup.py
ship_performance_service_interface/protos/: sps_interface.proto
ship_performance_service_interface/ship_performance_service_interface_lib/: sps_interface_pb2.py  sps_interface_pb2_grpc.py
(+19 files in other folders)
